--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -20,3 +20,8 @@ inst/share
 inst/dcmtk*
 ^.*\\.Rproj$
 ^\\.Rproj\\.user$
+^DESCRIPTION\.bak$
+^\.github$
+^autoci\.yml$
+^autoci_pkgdown\.yml$
+^tic\.R$
